--- a/work/scripts/personal.ipynb
+++ b/work/scripts/personal.ipynb
@@ -24,8 +24,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 93.8 ms\n",
-      "Wall time: 2.43 s\n"
+      "CPU times: total: 125 ms\n",
+      "Wall time: 2.62 s\n"
      ]
     }
    ],
@@ -40,13 +40,72 @@
     "import shutil  # упаковка в архив\n",
     "import warnings\n",
     "\n",
-    "warnings.simplefilter(action=\"ignore\")\n",
+    "warnings.simplefilter(action=\"ignore\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# функции\n",
     "\n",
-    "# путь к безликим\n",
-    "unpersonal_path = 'C:/personal_auto/unpersonal/'\n",
+    "def words(string):\n",
+    "    \"\"\"возвращает список значимых слов в названии субъекта,\n",
+    "    приведённых к нижнему регистру\"\"\"\n",
+    "    str = \"\"\n",
+    "    tp_list = [\"республика\", \"край\", \"область\", \"автономный\", \"автономная\", \"округ\", \"народная\", \"г\"]\n",
+    "    for symbol in string:\n",
+    "        symbol = symbol if symbol.isalpha() else \"$\"\n",
+    "        str = str + symbol\n",
+    "    lst = str.split(\"$\")\n",
+    "    while \"\" in lst:\n",
+    "        lst.remove(\"\")\n",
+    "    lst = [element.lower() for element in lst]\n",
+    "    for w in tp_list:\n",
+    "        while w in lst:\n",
+    "            lst.remove(w)\n",
+    "    return lst\n",
     "\n",
-    "# список файлов в целевой директории\n",
-    "source_files_list = os.listdir(unpersonal_path)\n"
+    "def letter(word_1, word_2):\n",
+    "    \"\"\"побуквенное сравнение слов\n",
+    "    возвращает долю совпавших букв в слове с наименьшим числом символов\"\"\"\n",
+    "    k = 0\n",
+    "    for i in range(min(len(word_1), len(word_2)) - 1):\n",
+    "        if (word_1[i].lower() == word_2[i].lower()) and (word_1[i+1].lower() == word_2[i+1].lower()):\n",
+    "            k += 1\n",
+    "    return k/min(len(word_1), len(word_2))\n",
+    "\n",
+    "def real_region_name (region_name_1, region_name_2):\n",
+    "    \"\"\"возвращает \"правильное\" название региона\"\"\"\n",
+    "    lst_1 = words(region_name_1)\n",
+    "    lst_2 = words(region_name_2)\n",
+    "    noret = True\n",
+    "    real_name = region_name_1 if len(region_name_1) > len(region_name_2) else region_name_2\n",
+    "    for element in lst_1:\n",
+    "        if element in lst_2:\n",
+    "            return real_name\n",
+    "            noret = False\n",
+    "    if noret:\n",
+    "        for element_1 in lst_1:\n",
+    "            for element_2 in lst_2:\n",
+    "                if letter(element_1, element_2) >= 0.7:\n",
+    "                    return real_name\n",
+    "                \n",
+    "def region_name_change (region_name, table_change):\n",
+    "    \"\"\"заменяет названия регионов на названия из списка замены\"\"\"\n",
+    "    try:\n",
+    "        dict_change = table_change.set_index(table_change.columns[0]).T.to_dict(\"records\")[0]\n",
+    "    except Exception:\n",
+    "        dict_change = table_change.set_index(table_change.columns[0]).T.to_dict(\"records\")\n",
+    "    try:\n",
+    "        if region_name in dict_change.keys():\n",
+    "            return dict_change[region_name]\n",
+    "        else:\n",
+    "            return region_name\n",
+    "    except Exception:\n",
+    "        return region_name"
    ]
   },
   {
@@ -58,13 +117,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 27 s\n",
-      "Wall time: 1min 11s\n"
+      "CPU times: total: 24.9 s\n",
+      "Wall time: 1min 10s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
+    "# путь к безликим\n",
+    "unpersonal_path = 'C:/personal_auto/unpersonal/'\n",
+    "\n",
+    "# список файлов в целевой директории\n",
+    "source_files_list = os.listdir(unpersonal_path)\n",
+    "\n",
+    "# загрузка безликих\n",
     "df_dt = pd.DataFrame()\n",
     "for file in source_files_list:\n",
     "    df_tmp = pd.read_csv(\n",
@@ -78,23 +144,88 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# путь к персонифицированным\n",
+    "personal_path = \"C:/personal_auto/personal.xlsx\"\n",
+    "\n",
+    "# загрузка персонифицированных\n",
+    "df_dtp = pd.read_excel(\n",
+    "    personal_path,\n",
+    "    sheet_name=\"frmr_depart\",\n",
+    "    index_col=None,\n",
+    "    dtype=\"str\",\n",
+    ")\n",
+    "\n",
+    "# преобразование типов\n",
+    "try:\n",
+    "    df_dtp[\"Дата рождения\"] = pd.to_datetime(\n",
+    "        df_dtp[\"Дата рождения\"], format=\"ISO8601\"\n",
+    "    ).dt.date\n",
+    "except Exception as e:\n",
+    "    print(\"Проверьте формат даты рождения в исходном файле\")\n",
+    "    print(e)\n",
+    "try:\n",
+    "    df_dtp[\"Дата начала\"] = pd.to_datetime(\n",
+    "    df_dtp[\"Дата начала\"], format=\"ISO8601\"\n",
+    "    ).dt.date\n",
+    "except Exception as e:\n",
+    "    print(\"Проверьте формат даты начала в исходном файле\")\n",
+    "    print(e)\n",
+    "try:\n",
+    "    df_dtp[\"Дата окончания\"] = pd.to_datetime(\n",
+    "    df_dtp[\"Дата окончания\"], format=\"ISO8601\"\n",
+    "    ).dt.date\n",
+    "except Exception as e:\n",
+    "    print(\"Проверьте формат даты начала в исходном файле\")\n",
+    "    print(e)\n",
+    "try:\n",
+    "    df_dtp[\"Дата начала неисполнения\"] = pd.to_datetime(\n",
+    "    df_dtp[\"Дата начала неисполнения\"], format=\"ISO8601\"\n",
+    "    ).dt.date\n",
+    "except Exception as e:\n",
+    "    print(\"Проверьте формат даты начала неисполнения в исходном файле\")\n",
+    "    print(e)\n",
+    "try:\n",
+    "    df_dtp[\"Дата окончания неисполнения\"] = pd.to_datetime(\n",
+    "    df_dtp[\"Дата окончания неисполнения\"], format=\"ISO8601\"\n",
+    "    ).dt.date\n",
+    "except Exception as e:\n",
+    "    print(\"Проверьте формат даты окончания неисполнения в исходном файле\")\n",
+    "    print(e)\n",
+    "try:\n",
+    "    df_dtp[\"Ставка\"] = df_dtp[\"Ставка\"].astype(\"float\")\n",
+    "except Exception as e:\n",
+    "    print(\"Проверьте формат чисел в столбце 'Ставка'\")\n",
+    "    print(e)\n",
+    "\n",
+    "# добавление столбца уникальных\n",
+    "df_dtp[\"unique\"] = df_dtp.apply(\n",
+    "    lambda row: str(row[\"Фамилия\"]) + str(row[\"Имя\"]) + str(row[\"Отчество\"]) + str(row[\"Пол\"]) + str(row[\"Дата рождения\"]), axis=1\n",
+    ")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Поиск и замена регионов, имеющих различные наименования"
+    "#### Поиск и замена названий регионов, имеющих различные наименования"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 31.2 ms\n",
-      "Wall time: 151 ms\n"
+      "CPU times: total: 46.9 ms\n",
+      "Wall time: 146 ms\n"
      ]
     },
     {
@@ -155,88 +286,154 @@
        "6  Чувашская Республика    Чувашская Республика - Чувашия"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%%time\n",
-    "# список регионов\n",
-    "df_regions = pd.DataFrame(df_dt['3. Адрес МО. Наим. субъекта РФ']).drop_duplicates().reset_index(drop=True)\n",
+    "# список регионов для безликих\n",
+    "df_regions_u = pd.DataFrame(df_dt['3. Адрес МО. Наим. субъекта РФ']).drop_duplicates().reset_index(drop=True)\n",
     "\n",
-    "# функции\n",
-    "def words(string):\n",
-    "    \"\"\"возвращает список значимых слов в названии субъекта,\n",
-    "    приведённых к нижнему регистру\"\"\"\n",
-    "    str = \"\"\n",
-    "    tp_list = [\"республика\", \"край\", \"область\", \"автономный\", \"автономная\", \"округ\", \"народная\", \"г\"]\n",
-    "    for symbol in string:\n",
-    "        symbol = symbol if symbol.isalpha() else \"$\"\n",
-    "        str = str + symbol\n",
-    "    lst = str.split(\"$\")\n",
-    "    while \"\" in lst:\n",
-    "        lst.remove(\"\")\n",
-    "    lst = [element.lower() for element in lst]\n",
-    "    for w in tp_list:\n",
-    "        while w in lst:\n",
-    "            lst.remove(w)\n",
-    "    return lst\n",
-    "\n",
-    "def letter(word_1, word_2):\n",
-    "    \"\"\"побуквенное сравнение слов\n",
-    "    возвращает долю совпавших букв в слове с наименьшим числом символов\"\"\"\n",
-    "    k = 0\n",
-    "    for i in range(min(len(word_1), len(word_2)) - 1):\n",
-    "        if (word_1[i].lower() == word_2[i].lower()) and (word_1[i+1].lower() == word_2[i+1].lower()):\n",
-    "            k += 1\n",
-    "    return k/min(len(word_1), len(word_2))\n",
-    "\n",
-    "def real_region_name (region_name_1, region_name_2):\n",
-    "    \"\"\"возвращает \"правильное\" название региона\"\"\"\n",
-    "    lst_1 = words(region_name_1)\n",
-    "    lst_2 = words(region_name_2)\n",
-    "    noret = True\n",
-    "    real_name = region_name_1 if len(region_name_1) > len(region_name_2) else region_name_2\n",
-    "    for element in lst_1:\n",
-    "        if element in lst_2:\n",
-    "            return real_name\n",
-    "            noret = False\n",
-    "    if noret:\n",
-    "        for element_1 in lst_1:\n",
-    "            for element_2 in lst_2:\n",
-    "                if letter(element_1, element_2) >= 0.7:\n",
-    "                    return real_name\n",
-    "                \n",
-    "# таблица замены\n",
-    "df_crossregions = pd.merge(df_regions, df_regions, how=\"cross\")\n",
-    "df_crossregions[\"real_region_name\"] = df_crossregions.apply(\n",
+    "# таблица замены для обезличенных\n",
+    "df_crossregions_u = pd.merge(df_regions_u, df_regions_u, how=\"cross\")\n",
+    "df_crossregions_u[\"real_region_name\"] = df_crossregions_u.apply(\n",
     "    lambda row: real_region_name(\n",
     "        row[\"3. Адрес МО. Наим. субъекта РФ_x\"], row[\"3. Адрес МО. Наим. субъекта РФ_y\"]\n",
     "    ),\n",
     "    axis=1,\n",
     ")\n",
-    "df_realregions = df_crossregions.reset_index(drop=True)\n",
-    "df_realregions = df_realregions.dropna().reset_index(drop=True)\n",
-    "df_realregions = df_realregions[\n",
-    "    df_realregions[\"3. Адрес МО. Наим. субъекта РФ_x\"]\n",
-    "    != df_realregions[\"3. Адрес МО. Наим. субъекта РФ_y\"]\n",
+    "df_realregions_u = df_crossregions_u.reset_index(drop=True)\n",
+    "df_realregions_u = df_realregions_u.dropna().reset_index(drop=True)\n",
+    "df_realregions_u = df_realregions_u[\n",
+    "    df_realregions_u[\"3. Адрес МО. Наим. субъекта РФ_x\"]\n",
+    "    != df_realregions_u[\"3. Адрес МО. Наим. субъекта РФ_y\"]\n",
     "]\n",
     "# исключение из списка автозамены названий, не подвластных алгоритму\n",
-    "drop_regions_list = [\"Республика Алтай\",\n",
+    "drop_regions_list_u = [\"Республика Алтай\",\n",
     "                     \"Ямало-Ненецкий автономный округ\",\n",
     "                     \"Республика Саха (Якутия)\",\n",
     "                     \"Алтайский край\",\n",
     "                     \"Ненецкий автономный округ\",\n",
     "                     \"Сахалинская область\",\n",
     "]\n",
-    "df_realregions = df_realregions.set_index(\"3. Адрес МО. Наим. субъекта РФ_x\")\n",
-    "for region_name in drop_regions_list:\n",
-    "    df_realregions.drop(region_name, axis=0,inplace=True)\n",
-    "df_realregions.reset_index(drop=True , inplace=True )\n",
-    "df_realregions = df_realregions.rename(columns={\"3. Адрес МО. Наим. субъекта РФ_y\": \"region_name\"})\n",
-    "df_realregions = df_realregions[df_realregions[\"region_name\"] != df_realregions[\"real_region_name\"]]\n",
-    "df_realregions"
+    "df_realregions_u = df_realregions_u.set_index(\"3. Адрес МО. Наим. субъекта РФ_x\")\n",
+    "for region_name in drop_regions_list_u:\n",
+    "    df_realregions_u.drop(region_name, axis=0,inplace=True)\n",
+    "df_realregions_u.reset_index(drop=True , inplace=True )\n",
+    "df_realregions_u = df_realregions_u.rename(columns={\"3. Адрес МО. Наим. субъекта РФ_y\": \"region_name\"})\n",
+    "df_realregions_u = df_realregions_u[df_realregions_u[\"region_name\"] != df_realregions_u[\"real_region_name\"]]\n",
+    "df_realregions_u"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: total: 62.5 ms\n",
+      "Wall time: 90.6 ms\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>region_name</th>\n",
+       "      <th>real_region_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [region_name, real_region_name]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "# список регионов для персонифицированных\n",
+    "df_regions_p = pd.DataFrame(df_dtp['Субъект РФ']).drop_duplicates().reset_index(drop=True)\n",
+    "\n",
+    "# таблица замены для персонифицированных\n",
+    "df_crossregions_p = pd.merge(df_regions_p, df_regions_p, how=\"cross\")\n",
+    "df_crossregions_p[\"real_region_name\"] = df_crossregions_p.apply(\n",
+    "    lambda row: real_region_name(\n",
+    "        row[\"Субъект РФ_x\"], row[\"Субъект РФ_y\"]\n",
+    "    ),\n",
+    "    axis=1,\n",
+    ")\n",
+    "\n",
+    "df_realregions_p = df_crossregions_p.reset_index(drop=True)\n",
+    "df_realregions_p = df_realregions_p.dropna().reset_index(drop=True)\n",
+    "df_realregions_p = df_realregions_p[\n",
+    "    df_realregions_p[\"Субъект РФ_x\"]\n",
+    "    != df_realregions_p[\"Субъект РФ_y\"]\n",
+    "]\n",
+    "\n",
+    "# исключение из списка автозамены названий, не подвластных алгоритму\n",
+    "drop_regions_list_p = [\"Республика Алтай\",\n",
+    "                     \"Ямало-Ненецкий автономный округ\",\n",
+    "                     \"Республика Саха (Якутия)\",\n",
+    "                     \"Алтайский край\",\n",
+    "                     \"Ненецкий автономный округ\",\n",
+    "                     \"Сахалинская область\",\n",
+    "]\n",
+    "df_realregions_p = df_realregions_p.set_index(\"Субъект РФ_x\")\n",
+    "for region_name in drop_regions_list_p:\n",
+    "    df_realregions_p.drop(region_name, axis=0,inplace=True)\n",
+    "df_realregions_p.reset_index(drop=True , inplace=True )\n",
+    "df_realregions_p = df_realregions_p.rename(columns={\"Субъект РФ_y\": \"region_name\"})\n",
+    "df_realregions_p = df_realregions_p[df_realregions_p[\"region_name\"] != df_realregions_p[\"real_region_name\"]]\n",
+    "df_realregions_p"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Замена названий регионов"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_dt[\"real_region_name\"] = df_dt.apply(lambda row: region_name_change (row[\"3. Адрес МО. Наим. субъекта РФ\"], df_realregions_u), axis=1)\n",
+    "df_dtp[\"real_region_name\"] = df_dtp.apply(lambda row: region_name_change (row[\"Субъект РФ\"], df_realregions_p), axis=1)"
    ]
   },
   {
