Замана файла ФЛК_1234 на новый, в котором корректно распознаётся некорректный формат даты

--- a/work/scripts/flk_1_2_3_4_auto.ipynb
+++ b/work/scripts/flk_1_2_3_4_auto.ipynb
@@ -17,21 +17,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "В целевой директории единственный файл 20_10_в_9_25.csv\n",
+      "В целевой директории единственный файл АСММС_13.07.csv\n",
       "Статус: ['На согласовании', 'На редактировании (после отклонения)', 'Запрос на отклонение', 'Согласовано']\n",
       "Дата начала: 2020-07-10\n",
       "Дата окончания: 2073-07-03\n",
       "Структура исходных данных верная\n",
       "Удалено 0 полностью пустых строк\n",
-      "Внимание! В исходных данных повторяются следующие МО:\n",
-      "31_1\n",
+      "Коды МО в исходных данных не повторяются\n",
       "Структура данных полная, есть и МО, и СП, и кабинеты\n",
       "Несоответствие между МО и СП сохранены в файл\n",
       "Несоответствия между СП и кабинетами сохранены в файл\n",
@@ -40,10 +39,10 @@
       "Данные по регионам с нулевой суммой сохранены в файл\n",
       "Данные по успешным регионам сохранены в файл\n",
       "Данные по регионам с ошибками сохранены в файл\n",
-      "Архив с файлами сохранён: c:\\work\\flk_123\\flk_1234\\result_flk_1_2\\20_10_в_9_25_flk12_result.zip, временная папка c:/work/flk_123/flk_1234/result_flk_1_2/_tmp удалена\n",
+      "Архив с файлами сохранён: c:\\work\\flk_123\\flk_1234\\result_flk_1_2\\АСММС_13_flk12_result.zip, временная папка c:/work/flk_123/flk_1234/result_flk_1_2/_tmp удалена\n",
       "Данные сохранены в файл Excel\n",
-      "CPU times: total: 15.4 s\n",
-      "Wall time: 52.8 s\n"
+      "CPU times: total: 15.8 s\n",
+      "Wall time: 39.2 s\n"
      ]
     }
    ],
@@ -232,9 +231,14 @@
     "\n",
     "# преобразование формата даты для фильтрации\n",
     "# df_ass[\"Дата последнего статуса\"] = df_ass[\"Дата последнего статуса\"].astype(\"datetime64[ns]\", format = \"%d.%m.%Y %H:%M:%S\")\n",
-    "df_ass[\"Дата последнего статуса\"] = pd.to_datetime(\n",
-    "    df_ass[\"Дата последнего статуса\"], format=\"%d.%m.%Y %H:%M:%S\"\n",
-    ")\n",
+    "try:\n",
+    "    df_ass[\"Дата последнего статуса\"] = pd.to_datetime(\n",
+    "        df_ass[\"Дата последнего статуса\"], format=\"%d.%m.%Y %H:%M:%S\"\n",
+    "    )\n",
+    "except Exception:\n",
+    "    df_ass[\"Дата последнего статуса\"] = pd.to_datetime(\n",
+    "    df_ass[\"Дата последнего статуса\"], format=\"mixed\"\n",
+    "    )\n",
     "\n",
     "# копия исходника для потомков\n",
     "df_ass_0 = df_ass.copy()\n",
@@ -868,46 +872,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "В целевой директории единственный файл 20_10_в_9_25.csv\n",
+      "В целевой директории единственный файл АСММС_13.07.csv\n",
       "Статус: ['На согласовании', 'На редактировании (после отклонения)', 'Запрос на отклонение', 'Согласовано']\n",
       "Дата начала: 2020-07-10\n",
       "Дата окончания: 2073-07-03\n",
       "Структура исходных данных верная\n",
       "Удалено 0 полностью пустых строк\n",
       "Типы МО:\n",
-      "Кабинет врача-психиатра\n",
-      "Общепсихиатрическое отделение для обслуживания детского населения\n",
-      "Психиатрический дневной стационар для обслуживания детского населения\n",
-      "Кабинет врача-психиатра детского\n",
-      "Кабинет (отделение) медико-психологической помощи\n",
       "Психиатрическая больница\n",
-      "Кабинет активного диспансерного наблюдения и проведения амбулаторного принудительного лечения\n",
       "Отделение «Телефон доверия»\n",
+      "Кабинет медико-психологического консультирования\n",
+      "Психотерапевтический кабинет\n",
+      "Кабинет активного диспансерного наблюдения и проведения амбулаторного принудительного лечения\n",
       "Общепсихиатрическое отделение\n",
       "Отделение первого психотического эпизода\n",
       "Отделение психосоциальной реабилитации\n",
-      "Психотерапевтическое отделение\n",
+      "Кабинет врача-психиатра\n",
+      "Общепсихиатрическое отделение для обслуживания детского населения\n",
       "Психиатрический дневной стационар\n",
-      "Кабинет медико-психологического консультирования\n",
       "Отделение оказания психиатрической помощи при расстройствах психотического спектра в условиях дневного стационара\n",
-      "Организационно-методический отдел (кабинет) психоневрологического диспансера (центра психического здоровья, психиатрической больницы)\n",
       "Психиатрический дневной стационар для психосоциальной реабилитации\n",
-      "Психотерапевтический кабинет\n",
+      "Психотерапевтическое отделение\n",
+      "Кабинет (отделение) медико-психологической помощи\n",
+      "Кабинет врача-психиатра детского\n",
+      "Психиатрический дневной стационар для обслуживания детского населения\n",
+      "Организационно-методический отдел (кабинет) психоневрологического диспансера (центра психического здоровья, психиатрической больницы)\n",
+      "Кабинет врача-сексолога\n",
       "Соматопсихиатрическое отделение\n",
       "Психоневрологический диспансер (центр психического здоровья, диспансерное отделение психиатрической больницы)\n",
-      "Кабинет врача-сексолога\n",
       "Отделение оказания психиатрической помощи в экстренной и неотложной формах\n",
       "В директории f2 единственный файл СВОД_ФОРМЫ_2_на_19.10.2023.xlsx\n",
       "Данные сохранены в файл Excel\n",
-      "CPU times: total: 4.27 s\n",
-      "Wall time: 13.7 s\n"
+      "CPU times: total: 4.56 s\n",
+      "Wall time: 12.5 s\n"
      ]
     }
    ],
@@ -991,7 +995,15 @@
     "    print(\"Структура исходных данных верная\")\n",
     "\n",
     "# преобразование формата даты для фильтрации\n",
-    "df_ass[\"Дата последнего статуса\"] = pd.to_datetime(df_ass[\"Дата последнего статуса\"], format=\"%d.%m.%Y %H:%M:%S\")\n",
+    "# df_ass[\"Дата последнего статуса\"] = pd.to_datetime(df_ass[\"Дата последнего статуса\"], format=\"%d.%m.%Y %H:%M:%S\")\n",
+    "try:\n",
+    "    df_ass[\"Дата последнего статуса\"] = pd.to_datetime(\n",
+    "        df_ass[\"Дата последнего статуса\"], format=\"%d.%m.%Y %H:%M:%S\"\n",
+    "    )\n",
+    "except Exception:\n",
+    "    df_ass[\"Дата последнего статуса\"] = pd.to_datetime(\n",
+    "    df_ass[\"Дата последнего статуса\"], format=\"mixed\"\n",
+    "    )\n",
     "\n",
     "# копия исходника для потомков\n",
     "df_ass_0 = df_ass.copy()\n",
@@ -1838,14 +1850,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Сводный файл сохранён: c:/work/flk_123/flk_1234/result_flk_1_2/20_10_в_9_25_pivot.csv\n",
+      "Сводный файл сохранён: c:/work/flk_123/flk_1234/result_flk_1_2/АСММС_13_pivot.csv\n",
       "Ошибок oid не обнаружено\n"
      ]
     }
