--- a/work/scripts/personal.ipynb
+++ b/work/scripts/personal.ipynb
@@ -24,8 +24,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 125 ms\n",
-      "Wall time: 2.62 s\n"
+      "CPU times: total: 156 ms\n",
+      "Wall time: 322 ms\n"
      ]
     }
    ],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,14 +110,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 24.9 s\n",
+      "CPU times: total: 26.4 s\n",
       "Wall time: 1min 10s\n"
      ]
     }
@@ -145,10 +145,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: total: 2.66 s\n",
+      "Wall time: 7.63 s\n"
+     ]
+    }
+   ],
    "source": [
+    "%%time\n",
     "# путь к персонифицированным\n",
     "personal_path = \"C:/personal_auto/personal.xlsx\"\n",
     "\n",
@@ -217,15 +227,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 46.9 ms\n",
-      "Wall time: 146 ms\n"
+      "CPU times: total: 78.1 ms\n",
+      "Wall time: 156 ms\n"
      ]
     },
     {
@@ -286,7 +296,7 @@
        "6  Чувашская Республика    Чувашская Республика - Чувашия"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +347,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: total: 62.5 ms\n",
-      "Wall time: 90.6 ms\n"
+      "Wall time: 96.8 ms\n"
      ]
     },
     {
@@ -376,7 +386,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
