--- a/work/scripts/validation_tsifrimed.ipynb
+++ b/work/scripts/validation_tsifrimed.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "1f9aa142-8f1b-4237-a7f2-2bf0402b13a7",
    "metadata": {
     "tags": []
@@ -25,15 +25,7 @@
     "# игнорирование предупреждения о формате при импорте из excel\n",
     "import warnings\n",
     "\n",
-    "warnings.simplefilter(\"ignore\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 162,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "warnings.simplefilter(\"ignore\")\n",
     "# пути и списки файлов\n",
     "# файлы берём непосредственно из хранилища нового бота посещений\n",
     "e_path = \"C:/work/new_bot/new/e\"\n",
@@ -66,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -81,6 +73,7 @@
       "\t\tотсутствуют\n",
       "\tЗначимые ошибки данных (количество и доля от числа строк на соответствующем этапе):\n",
       "\t\tValidatePerson_uncorrected:\t4\t(0.01 %)\n",
+      "\t\tMO_uncorrected:\t\t\t0\t(0.0 %)\n",
       "\t\tServiceOrSpecs_uncorrected:\t3620\t(3.72 %)\n",
       "\t\tSlot_uncorrected:\t\t2646\t(2.38 %)\n",
       "\t\tBook_uncorrected:\t\t40\t(0.22 %)\n",
@@ -92,6 +85,7 @@
       "\t\tстолбец 'Название субъекта РФ':\t\t 1 (0.0 %)\n",
       "\tЗначимые ошибки данных (количество и доля от числа строк на соответствующем этапе):\n",
       "\t\tValidatePerson_uncorrected:\t1\t(0.0 %)\n",
+      "\t\tMO_uncorrected:\t\t\t0\t(0.0 %)\n",
       "\t\tServiceOrSpecs_uncorrected:\t3564\t(3.68 %)\n",
       "\t\tSlot_uncorrected:\t\t2663\t(2.4 %)\n",
       "\t\tBook_uncorrected:\t\t65\t(0.37 %)\n",
@@ -102,6 +96,8 @@
       "\tПропуски в столбцах, где их быть не должно:\n",
       "\t\tотсутствуют\n",
       "\tЗначимые ошибки данных (количество и доля от числа строк на соответствующем этапе):\n",
+      "\t\tValidatePerson_uncorrected:\t0\t(0.0 %)\n",
+      "\t\tMO_uncorrected:\t\t\t0\t(0.0 %)\n",
       "\t\tServiceOrSpecs_uncorrected:\t3071\t(3.62 %)\n",
       "\t\tSlot_uncorrected:\t\t2294\t(2.63 %)\n",
       "\t\tBook_uncorrected:\t\t96\t(0.74 %)\n",
@@ -112,6 +108,8 @@
       "\tПропуски в столбцах, где их быть не должно:\n",
       "\t\tотсутствуют\n",
       "\tЗначимые ошибки данных (количество и доля от числа строк на соответствующем этапе):\n",
+      "\t\tValidatePerson_uncorrected:\t0\t(0.0 %)\n",
+      "\t\tMO_uncorrected:\t\t\t0\t(0.0 %)\n",
       "\t\tServiceOrSpecs_uncorrected:\t1821\t(4.42 %)\n",
       "\t\tSlot_uncorrected:\t\t1289\t(3.46 %)\n",
       "\t\tBook_uncorrected:\t\t47\t(1.11 %)\n",
@@ -122,6 +120,8 @@
       "\tПропуски в столбцах, где их быть не должно:\n",
       "\t\tотсутствуют\n",
       "\tЗначимые ошибки данных (количество и доля от числа строк на соответствующем этапе):\n",
+      "\t\tValidatePerson_uncorrected:\t0\t(0.0 %)\n",
+      "\t\tMO_uncorrected:\t\t\t0\t(0.0 %)\n",
       "\t\tServiceOrSpecs_uncorrected:\t1806\t(3.9 %)\n",
       "\t\tSlot_uncorrected:\t\t1406\t(3.28 %)\n",
       "\t\tBook_uncorrected:\t\t37\t(0.65 %)\n",
@@ -132,6 +132,8 @@
       "\tПропуски в столбцах, где их быть не должно:\n",
       "\t\tотсутствуют\n",
       "\tЗначимые ошибки данных (количество и доля от числа строк на соответствующем этапе):\n",
+      "\t\tValidatePerson_uncorrected:\t0\t(0.0 %)\n",
+      "\t\tMO_uncorrected:\t\t\t0\t(0.0 %)\n",
       "\t\tServiceOrSpecs_uncorrected:\t2859\t(3.48 %)\n",
       "\t\tSlot_uncorrected:\t\t2113\t(2.66 %)\n",
       "\t\tBook_uncorrected:\t\t50\t(0.48 %)\n",
@@ -142,6 +144,8 @@
       "\tПропуски в столбцах, где их быть не должно:\n",
       "\t\tстолбец 'Название субъекта РФ':\t\t 1 (0.0 %)\n",
       "\tЗначимые ошибки данных (количество и доля от числа строк на соответствующем этапе):\n",
+      "\t\tValidatePerson_uncorrected:\t0\t(0.0 %)\n",
+      "\t\tMO_uncorrected:\t\t\t0\t(0.0 %)\n",
       "\t\tServiceOrSpecs_uncorrected:\t4608\t(3.61 %)\n",
       "\t\tSlot_uncorrected:\t\t3315\t(2.39 %)\n",
       "\t\tBook_uncorrected:\t\t140\t(0.63 %)\n",
@@ -152,6 +156,8 @@
       "\tПропуски в столбцах, где их быть не должно:\n",
       "\t\tстолбец 'Название субъекта РФ':\t\t 2 (0.0 %)\n",
       "\tЗначимые ошибки данных (количество и доля от числа строк на соответствующем этапе):\n",
+      "\t\tValidatePerson_uncorrected:\t0\t(0.0 %)\n",
+      "\t\tMO_uncorrected:\t\t\t0\t(0.0 %)\n",
       "\t\tServiceOrSpecs_uncorrected:\t5221\t(4.86 %)\n",
       "\t\tSlot_uncorrected:\t\t3057\t(2.55 %)\n",
       "\t\tBook_uncorrected:\t\t161\t(0.89 %)\n",
@@ -163,6 +169,7 @@
       "\t\tотсутствуют\n",
       "\tЗначимые ошибки данных (количество и доля от числа строк на соответствующем этапе):\n",
       "\t\tValidatePerson_uncorrected:\t1\t(0.0 %)\n",
+      "\t\tMO_uncorrected:\t\t\t0\t(0.0 %)\n",
       "\t\tServiceOrSpecs_uncorrected:\t3971\t(3.95 %)\n",
       "\t\tSlot_uncorrected:\t\t2883\t(2.61 %)\n",
       "\t\tBook_uncorrected:\t\t138\t(0.9 %)\n",
@@ -174,6 +181,7 @@
       "\t\tстолбец 'Название субъекта РФ':\t\t 4 (0.0 %)\n",
       "\tЗначимые ошибки данных (количество и доля от числа строк на соответствующем этапе):\n",
       "\t\tValidatePerson_uncorrected:\t4\t(0.01 %)\n",
+      "\t\tMO_uncorrected:\t\t\t0\t(0.0 %)\n",
       "\t\tServiceOrSpecs_uncorrected:\t3414\t(4.03 %)\n",
       "\t\tSlot_uncorrected:\t\t2032\t(2.33 %)\n",
       "\t\tBook_uncorrected:\t\t106\t(0.81 %)\n",
@@ -184,6 +192,8 @@
       "\tПропуски в столбцах, где их быть не должно:\n",
       "\t\tотсутствуют\n",
       "\tЗначимые ошибки данных (количество и доля от числа строк на соответствующем этапе):\n",
+      "\t\tValidatePerson_uncorrected:\t0\t(0.0 %)\n",
+      "\t\tMO_uncorrected:\t\t\t0\t(0.0 %)\n",
       "\t\tServiceOrSpecs_uncorrected:\t2398\t(5.42 %)\n",
       "\t\tSlot_uncorrected:\t\t1426\t(3.57 %)\n",
       "\t\tBook_uncorrected:\t\t44\t(0.91 %)\n",
@@ -195,6 +205,7 @@
       "\t\tстолбец 'Название субъекта РФ':\t\t 2 (0.0 %)\n",
       "\tЗначимые ошибки данных (количество и доля от числа строк на соответствующем этапе):\n",
       "\t\tValidatePerson_uncorrected:\t5\t(0.01 %)\n",
+      "\t\tMO_uncorrected:\t\t\t0\t(0.0 %)\n",
       "\t\tServiceOrSpecs_uncorrected:\t2762\t(4.54 %)\n",
       "\t\tSlot_uncorrected:\t\t1403\t(2.53 %)\n",
       "\t\tBook_uncorrected:\t\t37\t(0.62 %)\n",
@@ -206,6 +217,7 @@
       "\t\tстолбец 'Название субъекта РФ':\t\t 3 (0.0 %)\n",
       "\tЗначимые ошибки данных (количество и доля от числа строк на соответствующем этапе):\n",
       "\t\tValidatePerson_uncorrected:\t3\t(0.0 %)\n",
+      "\t\tMO_uncorrected:\t\t\t0\t(0.0 %)\n",
       "\t\tServiceOrSpecs_uncorrected:\t46912\t(35.37 %)\n",
       "\t\tSlot_uncorrected:\t\t42628\t(33.83 %)\n",
       "\t\tBook_uncorrected:\t\t6415\t(35.47 %)\n",
@@ -216,6 +228,8 @@
       "\tПропуски в столбцах, где их быть не должно:\n",
       "\t\tотсутствуют\n",
       "\tЗначимые ошибки данных (количество и доля от числа строк на соответствующем этапе):\n",
+      "\t\tValidatePerson_uncorrected:\t0\t(0.0 %)\n",
+      "\t\tMO_uncorrected:\t\t\t0\t(0.0 %)\n",
       "\t\tServiceOrSpecs_uncorrected:\t1828\t(2.85 %)\n",
       "\t\tSlot_uncorrected:\t\t1069\t(1.65 %)\n",
       "\t\tBook_uncorrected:\t\t62\t(0.72 %)\n",
@@ -226,6 +240,8 @@
       "\tПропуски в столбцах, где их быть не должно:\n",
       "\t\tстолбец 'Название субъекта РФ':\t\t 1 (0.0 %)\n",
       "\tЗначимые ошибки данных (количество и доля от числа строк на соответствующем этапе):\n",
+      "\t\tValidatePerson_uncorrected:\t0\t(0.0 %)\n",
+      "\t\tMO_uncorrected:\t\t\t0\t(0.0 %)\n",
       "\t\tServiceOrSpecs_uncorrected:\t110428\t(100.0 %)\n",
       "\t\tSlot_uncorrected:\t\t114156\t(100.0 %)\n",
       "\t\tBook_uncorrected:\t\t15851\t(100.0 %)\n",
@@ -237,6 +253,7 @@
       "\t\tстолбец 'Название субъекта РФ':\t\t 3 (0.0 %)\n",
       "\tЗначимые ошибки данных (количество и доля от числа строк на соответствующем этапе):\n",
       "\t\tValidatePerson_uncorrected:\t2\t(0.0 %)\n",
+      "\t\tMO_uncorrected:\t\t\t0\t(0.0 %)\n",
       "\t\tServiceOrSpecs_uncorrected:\t7478\t(7.45 %)\n",
       "\t\tSlot_uncorrected:\t\t7036\t(6.59 %)\n",
       "\t\tBook_uncorrected:\t\t481\t(3.15 %)\n",
@@ -248,6 +265,7 @@
       "\t\tстолбец 'Название субъекта РФ':\t\t 1 (0.0 %)\n",
       "\tЗначимые ошибки данных (количество и доля от числа строк на соответствующем этапе):\n",
       "\t\tValidatePerson_uncorrected:\t1\t(0.0 %)\n",
+      "\t\tMO_uncorrected:\t\t\t0\t(0.0 %)\n",
       "\t\tServiceOrSpecs_uncorrected:\t6767\t(9.49 %)\n",
       "\t\tSlot_uncorrected:\t\t6602\t(8.31 %)\n",
       "\t\tBook_uncorrected:\t\t455\t(4.04 %)\n",
@@ -258,6 +276,8 @@
       "\tПропуски в столбцах, где их быть не должно:\n",
       "\t\tотсутствуют\n",
       "\tЗначимые ошибки данных (количество и доля от числа строк на соответствующем этапе):\n",
+      "\t\tValidatePerson_uncorrected:\t0\t(0.0 %)\n",
+      "\t\tMO_uncorrected:\t\t\t0\t(0.0 %)\n",
       "\t\tServiceOrSpecs_uncorrected:\t3838\t(4.16 %)\n",
       "\t\tSlot_uncorrected:\t\t2473\t(2.32 %)\n",
       "\t\tBook_uncorrected:\t\t136\t(0.76 %)\n",
@@ -269,6 +289,7 @@
       "\t\tстолбец 'Название субъекта РФ':\t\t 1 (0.0 %)\n",
       "\tЗначимые ошибки данных (количество и доля от числа строк на соответствующем этапе):\n",
       "\t\tValidatePerson_uncorrected:\t1\t(0.0 %)\n",
+      "\t\tMO_uncorrected:\t\t\t0\t(0.0 %)\n",
       "\t\tServiceOrSpecs_uncorrected:\t3618\t(4.23 %)\n",
       "\t\tSlot_uncorrected:\t\t2270\t(2.58 %)\n",
       "\t\tBook_uncorrected:\t\t208\t(1.22 %)\n",
@@ -279,6 +300,8 @@
       "\tПропуски в столбцах, где их быть не должно:\n",
       "\t\tотсутствуют\n",
       "\tЗначимые ошибки данных (количество и доля от числа строк на соответствующем этапе):\n",
+      "\t\tValidatePerson_uncorrected:\t0\t(0.0 %)\n",
+      "\t\tMO_uncorrected:\t\t\t0\t(0.0 %)\n",
       "\t\tServiceOrSpecs_uncorrected:\t2260\t(5.53 %)\n",
       "\t\tSlot_uncorrected:\t\t1420\t(3.5 %)\n",
       "\t\tBook_uncorrected:\t\t75\t(1.16 %)\n",
@@ -289,6 +312,8 @@
       "\tПропуски в столбцах, где их быть не должно:\n",
       "\t\tотсутствуют\n",
       "\tЗначимые ошибки данных (количество и доля от числа строк на соответствующем этапе):\n",
+      "\t\tValidatePerson_uncorrected:\t0\t(0.0 %)\n",
+      "\t\tMO_uncorrected:\t\t\t0\t(0.0 %)\n",
       "\t\tServiceOrSpecs_uncorrected:\t2447\t(4.94 %)\n",
       "\t\tSlot_uncorrected:\t\t1664\t(2.88 %)\n",
       "\t\tBook_uncorrected:\t\t127\t(1.48 %)\n",
@@ -300,9 +325,22 @@
       "\t\tотсутствуют\n",
       "\tЗначимые ошибки данных (количество и доля от числа строк на соответствующем этапе):\n",
       "\t\tValidatePerson_uncorrected:\t2\t(0.0 %)\n",
+      "\t\tMO_uncorrected:\t\t\t0\t(0.0 %)\n",
       "\t\tServiceOrSpecs_uncorrected:\t4371\t(3.89 %)\n",
       "\t\tSlot_uncorrected:\t\t3198\t(2.49 %)\n",
-      "\t\tBook_uncorrected:\t\t240\t(1.03 %)\n"
+      "\t\tBook_uncorrected:\t\t240\t(1.03 %)\n",
+      "\n",
+      "Файл 21.11.csv:\n",
+      "\t\tвсего строк: 518814\n",
+      "\t\tвсего столбцов: 13 (верно)\n",
+      "\tПропуски в столбцах, где их быть не должно:\n",
+      "\t\tотсутствуют\n",
+      "\tЗначимые ошибки данных (количество и доля от числа строк на соответствующем этапе):\n",
+      "\t\tValidatePerson_uncorrected:\t1\t(0.0 %)\n",
+      "\t\tMO_uncorrected:\t\t\t0\t(0.0 %)\n",
+      "\t\tServiceOrSpecs_uncorrected:\t4142\t(4.58 %)\n",
+      "\t\tSlot_uncorrected:\t\t3032\t(2.8 %)\n",
+      "\t\tBook_uncorrected:\t\t211\t(1.25 %)\n"
      ]
     }
    ],
@@ -424,23 +462,23 @@
     "        )\n",
     "    ]\n",
     "\n",
-    "    if df_ValidatePerson.shape[0] > 0:\n",
+    "    if df_ValidatePerson.shape[0] >= 0:\n",
     "        print(\n",
     "            f\"\\t\\tValidatePerson_uncorrected:\\t{df_ValidatePerson.shape[0]}\\t({round(df_ValidatePerson.shape[0]*100/len_ValidatePerson, 2)} %)\"\n",
     "        )\n",
-    "    if df_MO.shape[0] > 0:\n",
+    "    if df_MO.shape[0] >= 0:\n",
     "        print(\n",
-    "            f\"\\t\\tMO_uncorrected:\\t{df_MO.shape[0]}\\t({round(df_MO.shape[0]*100/len_MO, 2)} %)\"\n",
+    "            f\"\\t\\tMO_uncorrected:\\t\\t\\t{df_MO.shape[0]}\\t({round(df_MO.shape[0]*100/len_MO, 2)} %)\"\n",
     "        )\n",
-    "    if df_ServiceOrSpecs.shape[0] > 0:\n",
+    "    if df_ServiceOrSpecs.shape[0] >= 0:\n",
     "        print(\n",
     "            f\"\\t\\tServiceOrSpecs_uncorrected:\\t{df_ServiceOrSpecs.shape[0]}\\t({round(df_ServiceOrSpecs.shape[0]*100/len_ServiceOrSpecs, 2)} %)\"\n",
     "        )\n",
-    "    if df_Slot.shape[0] > 0:\n",
+    "    if df_Slot.shape[0] >= 0:\n",
     "        print(\n",
     "            f\"\\t\\tSlot_uncorrected:\\t\\t{df_Slot.shape[0]}\\t({round(df_Slot.shape[0]*100/len_Slot, 2)} %)\"\n",
     "        )\n",
-    "    if df_Book.shape[0] > 0:\n",
+    "    if df_Book.shape[0] >= 0:\n",
     "        print(\n",
     "            f\"\\t\\tBook_uncorrected:\\t\\t{df_Book.shape[0]}\\t({round(df_Book.shape[0]*100/len_Book, 2)} %)\"\n",
     "        )\n",
