--- a/work/scripts/validation_tsifrimed.ipynb
+++ b/work/scripts/validation_tsifrimed.ipynb
@@ -33,15 +33,7 @@
     "dm_path = \"C:/work/new_bot/new/dm\"\n",
     "e_file_list = os.listdir(e_path)\n",
     "s_file_list = os.listdir(s_path)\n",
-    "dm_file_list = os.listdir(dm_path + \"/\" + max(os.listdir(dm_path)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "dm_file_list = os.listdir(dm_path + \"/\" + max(os.listdir(dm_path)))\n",
     "# типы ошибок\n",
     "t_error_list = [\n",
     "    \"Ошибка валидации данных пациента\",\n",
